@@ -38,3 +38,4 @@
 * nemmem.inf (Across memory check) is no longer supported
 * files.inf (files are read from ../files, instead of elma.res) is no longer supported
 * Debug code to generate elma.res/desclist.txt is removed
+* Level files are always unlocked, and you can no longer Save Lock
